apps/frontend/src/components/ui/select/styles.css
@import "tailwindcss";

@layer utilities {
    body:has(select:open) {
        overflow: hidden;
    }

    select {
        width: 100%;
        padding: 0.4rem 0.6rem;
        transition: all 0.2s ease;
        font-family: inherit;
        cursor: pointer;
        border-radius: var(--radius-md);

        &:where(:focus, :hover) {
            border-color: var(--color-accent-bg);
        }
    }

    @supports (appearance: base-select) {
        select {
            padding: 0 0;
            appearance: base-select;
        }

        select::picker-icon {
            display: none;
        }

        .arrow {
            display: flex;
            align-items: center;
            justify-content: center;
        }

        svg {
            color: var(--gh-text-secondary);
            width: 1.3em;
            height: 1.3em;
            transform-origin: center center;
            translate: 0 5%;
            transition: rotate 0.2s ease-in-out;
        }

        select:open .arrow svg {
            rotate: 180deg;
        }

        .select-trigger {
            width: stretch;
            display: grid;
            align-items: center;
            grid-template-columns: 1fr min-content;
            gap: 0.7em;
        }

        select::picker(select) {
            appearance: base-select;
            max-height: calc(100% - 3rem);
            padding: 0.3rem;
            padding-block-start: 0.4rem;
            scrollbar-width: thin;

            background-color: var(--color-white);
            box-shadow: 2px 6px 8px #0006;
            border-radius: var(--radius-md);
            border: 1px solid var(--color-border);

            opacity: 1;
            transform: translateY(0.3rem);
            transition:
                opacity 0.25s ease-in-out,
                transform 0.3s,
                display 1s;

            @starting-style {
                opacity: 0;
                transform: translateY(1em);
            }
        }

        select::picker(select)::backdrop {
            background-color: #00000022;
            opacity: 1;
            transition: opacity 0.5s ease-in-out;

            @starting-style {
                opacity: 0;
            }
        }

        option {
            font-size: 0.93em;
            display: flex;
            flex-direction: row-reverse;
            justify-content: space-between;
            padding: 0.4em 1em;
            margin-block-end: 0.1em;
            outline: transparent;
            border-radius: 0.3rem;
            color: var(--color-zinc-600);

            &:last-of-type {
                margin-block-end: 0;
            }

            &::checkmark {
                content: "✓";
                height: 1rem;
                width: 1rem;
                display: grid;
                place-content: center;
                font-size: 1.3em;
                color: lch(from var(--color-accent-bg) calc(l * 0.7) c h);
            }

            &:hover {
                color: var(--color-zinc-900);
                background-color: lch(from var(--color-accent-bg) l c h / 0.17);
            }

            &:focus {
                color: var(--color-zinc-900);
                background-color: lch(from var(--color-accent-bg) l c h / 0.3);
            }

            .opt-content {
                display: grid;
            }

            .opt-label {
                font-weight: 500;
            }

            .opt-desc {
                font-size: 0.83em;
                color: var(--color-white);
            }
        }

        selectedcontent {
            .opt-desc {
                display: none;
            }
        }
    }
}

